# 2d-game-c

./: .gitignore  meson.build
assets/shaders/: sprite.frag  sprite.vert
src/: draw.c  draw.h  main.c
